...
                                <rect key="frame" x="185" y="448.66666666666669" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="fSc-Fh-rPn"/>
                                    <constraint firstAttribute="height" constant="60" id="iK9-q2-sfo"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N3Z-mm-tPl" userLabel="loginButton">
                                <rect key="frame" x="16" y="760" width="398" height="48"/>
                                <color key="backgroundColor" name="ypWhite"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="rsj-9e-zcB"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                            <constraint firstItem="C7i-9c-lcO" firstAttribute="top" secondItem="Vwg-aD-MQh" secondAttribute="top" id="yza-47-PHH"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="Osq-0t-8aC"/>
                    <connections>
                        <outlet property="progressView" destination="C7i-9c-lcO" id="ffe-Ri-TeP"/>
                        <outlet property="webView" destination="PT2-Su-2rH" id="4Nb-ce-fKu"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="E6y-bl-QOr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1007" y="1195"/>
        </scene>
...
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" name="ypDark"/>
                                        <connections>
                                            <outlet property="cellImage" destination="UHT-CC-7rY" id="aTR-f0-IcK"/>
                                            <outlet property="dateLabel" destination="zZ7-qv-kLf" id="PMO-hM-SIr"/>
                                            <outlet property="gradientView" destination="zsc-u5-rig" id="8PT-9b-4Pb"/>
                                            <outlet property="likeButton" destination="sdE-8c-JJO" id="Ina-lO-raz"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="iLa-Sj-bRa"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="V8N-x6-rWW"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="tabEditorialActive" id="84T-1G-AV0">
                        <color key="badgeColor" name="AccentColor"/>
                    </tabBarItem>
                    <connections>
                        <outlet property="tableView" destination="0ZD-Gs-GgP" id="Fuw-16-5ad"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1920" y="1864"/>
        </scene>
...
